--- a/src/components/CardsSection/styles.module.css
+++ b/src/components/CardsSection/styles.module.css
@@ -11,7 +11,7 @@
     color: var(--primary-text-color-light);
     font-weight: 600;
     text-transform: uppercase;
-    margin: 6rem 3rem 3rem 3rem;
+    margin: 3rem 3rem 3rem 3rem;
 }
   
   .cardsSectionContainer {
