--- a/src/components/News/styles.module.css
+++ b/src/components/News/styles.module.css
@@ -82,5 +82,6 @@
 @media screen and (max-width: 625px) {
   .newsTitle {
     font-size: 1.5rem;
+    margin-top: 3.5rem;
   }
 }
